
import Foundation

public struct AccessibilityId {
  public struct VPNPermission {
    public static let screen = "id.vpnPermission.screen"
    public static let submit = "id.vpnPermission.ok.button"
  }
  
  public struct Dashboard {
    public static let connectionButton = "id.dashboard.connection.button"
  }
  
}


/// This is the same struct `Accessibility` from `VPLibrary`
/// It has been copied over to the VPN ios client app to
/// facilitate e2e testing.
/// In the future, we will move the Welcome and Login ViewControllers and storyboards from `VPLibrary` into vpn ios
/// And this duplication will not be necessary
public struct VPLibraryAccessibility {
    public struct Id {
        public struct Welcome {
            public static let environment = "id.welcome.environment"
        }
        public struct Login {
            public static let submit = "id.login.submit"
            public static let submitNew = "id.login.submit.new"
            public static let username = "id.login.username"
            public static let password = "id.login.submit"
            public struct Error {
                public static let banner = "id.login.error.banner"
            }
        }
      
        public struct Dashboard {
            public static let menu = "id.dashboard.menu"
        }
        public struct Menu {
            public static let logout = "id.menu.logout"
        }
        public struct Dialog {
            public static let destructive = "id.dialog.destructive.button"
        }
    }
}

